--- a/css/styles.css
+++ b/css/styles.css
@@ -223,6 +223,21 @@ body {
   min-height: 100vh;
 }
 
+main.first nav a:nth-child(1),
+main.first nav a:nth-child(2) {
+  visibility: hidden;
+}
+
+main.latest nav a:nth-child(4),
+main.latest nav a:nth-child(5) {
+  visibility: hidden;
+}
+
+p.video a {
+  font-weight: bolder;
+  font-size: 1rem;
+}
+
 /* Responsive */
 @media (min-width:768px) {
   header nav ul a svg { display: none; }
@@ -243,3 +258,4 @@ body {
     margin-right: 0.25em;
   }
 }
+
