--- a/css/styles.css
+++ b/css/styles.css
@@ -166,6 +166,21 @@ body > footer {
   margin-top: 2rem;
 }
 
+footer nav {
+  display: flex;
+  align-items: center;
+  margin-top: 1em;
+}
+
+footer nav h2 {
+  font-size: 1em;
+  margin: 0 1em 0 0;
+}
+
+footer nav a {
+  margin: 0 0.25em;
+}
+
 .thumbs-nav {
   max-width: 630px;
   margin: auto;
