Remove embedded links to Youtube

--- a/css/styles.css
+++ b/css/styles.css
@@ -292,6 +292,42 @@ p.video a {
   font-size: 1rem;
 }
 
+.blog-youtube {
+  position: relative;
+  display: inline-block;
+
+  &::after {
+    --base: #f33;
+    content: "";
+    position: absolute;
+    width: 20%;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: 
+      conic-gradient(at 100% 50%, #0000 240deg, #fff 0 300deg, #0000 0) 55% 50% / 40% 100% no-repeat,
+    var(--base);
+  }
+
+  img {
+    width: 480px;
+    max-width: 100%;
+    aspect-ratio: 16/9;
+    object-fit: cover;
+    border: 1px solid #0008;
+    position: relative;
+    display: block;
+  }
+
+  &:hover {
+    &::after {
+      --base: #000a;
+    }
+  }
+}
+
 /* Responsive */
 @media (min-width:768px) {
   header nav ul a svg { display: none; }
