--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,10 @@ main h1 {
   text-decoration-color: transparent;
 }
 
+.home main nav a[hidden] {
+  visibility: hidden;
+}
+
 #comic-strip {
   min-height: 250px;
   border: 1px solid #ddd;
