--- a/games/css/css-colors.css
+++ b/games/css/css-colors.css
@@ -186,7 +186,7 @@
         }
 
         li:nth-child(3) & {
-          border-block-end: max(2px, 0.05em) solid #000;
+          border-block-end: max(2px, 0.05em) solid #000 !important;
         }
       }
     }
